CHANGE ALL PASS TO PASSWORD
