# route/AuthRoute.js
@@ -7,7 +7,7 @@ const AuthCtrl  = require("../controller/AuthCtrl");
 /* Public */
 router.get("/:id", AuthCtrl.readAvatar);
 router.post("/", AuthCtrl.loginUser);
-router.post("/pass", AuthCtrl.forgotPass);
+router.post("/password", AuthCtrl.forgotPassword);
 router.post("/recaptcha", AuthCtrl.checkRecaptcha);
 
 module.exports = router;
